--- a/index.html
+++ b/index.html
@@ -2,9 +2,6 @@
 <html lang="pt-br">
 
 <head>
-  <base href="/" />
-  <link rel="canonical" href="/" />
-
   <title>Ajax + Axios * Repositório (gmoehra)</title>
 
   <meta charset="utf-8" />
@@ -39,11 +36,11 @@
   <!-- # IMPORTS # -->
 
   <!-- favicon -->
-  <link rel="shortcut icon" type="image/png" href="https://github.githubassets.com/favicons/favicon.svg" sizes="16x16">
+  <link rel="shortcut icon" type="image/png" href="assets.com/favicons/favicon.svg" sizes="16x16">
 
   <!-- css -->
-  <link rel="stylesheet" href="/assets/content/public/css/style.css">
-  <link rel="stylesheet" href="/assets/content/public/javascript/utils/toastr.css">
+  <link rel="stylesheet" href="assets/content/public/css/style.css">
+  <link rel="stylesheet" href="assets/content/public/javascript/utils/toastr.css">
 
   <!-- javascript -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
@@ -77,8 +74,8 @@
 
 
   <!-- # IMPORTS - ( JS - FUNÇÕES ) # -->
-  <script src="/assets/content/public/javascript/utils/toastr.min.js"></script>
-  <script src="/assets/content/public/javascript/function.js"></script>
+  <script src="assets/content/public/javascript/utils/toastr.min.js"></script>
+  <script src="assets/content/public/javascript/function.js"></script>
 </body>
 
 </html>
